Fix Bug 403313 - Encoding problem on kmail2 5.10.1 when creating composer from command line

FIXED-IN: 5.10.3
BUG: 403313